Fix the alignments in navs and cards

--- a/_patterns/navigations/nav.css
+++ b/_patterns/navigations/nav.css
@@ -9,4 +9,8 @@
     text-align: left;
   }
 
+  .main-nav {
+    text-align: right;
+  }
+
 }
